@@ -13,6 +13,8 @@ import tiles.Tile;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collector;
+import java.util.stream.Collectors;
 
 public class Map {
     private TilePosition mBurglarPosition = new TilePosition(0, 0);
@@ -96,7 +98,7 @@ public class Map {
     }
 
     public void addBuilding(Building newBuilding) {
-        if (!mBuildings.stream().map(Building::getPosition).toList().contains(newBuilding.getPosition())) {
+        if (!mBuildings.stream().map(Building::getPosition).collect(Collectors.toList()).contains(newBuilding.getPosition())) {
             if (MapTools.isPositionValid(this, newBuilding.getPosition())) {
                 mBuildings.add(newBuilding);
             }
